test/good/dictionaries/op01.px

print {1: true} + {1: false}
print {"": [], "ab": ["a", "b"]} + {"a": ["a"]} == {"": [], "a": ["a"], "ab": ["a", "b"]}
