test/bad/tuples/decl04.px

c = [{0}]
a: [[{Rat}]]
a, b = [c, [{}]], []
